--- a/blog/src/css/themes/common.variables.styl
+++ b/blog/src/css/themes/common.variables.styl
@@ -18,7 +18,7 @@ $primary    = #168dce
 $secondary  = #326fbd
 $tertiary   = #86a5ff
 $quaternary = #08a4f9
-$quinary    = #f3f3f3
+$quinary    = #eaedf2
 
 $white     = #f8f8f8
 $neutral   = #E0E1E2
