--- a/admin-panel/src/assets/sass/_chat.scss
+++ b/admin-panel/src/assets/sass/_chat.scss
@@ -10,6 +10,12 @@
   background-color: #ffffff;
   box-shadow: 0 0 13px rgba(0,0,0,0.2);
   border-radius: 7px 7px 0 0;
+  transition: all 0.4s ease;
+
+  &.hide {
+    min-height: 0;
+    height: 40px !important;
+  }
 
   h4.header {
     position: relative;
@@ -21,35 +27,54 @@
     color: rgba(255, 255, 255, 0.8);
     background-color: $gray-800;
     box-shadow: 0 1px 3px rgba(0,0,0,0.4);
+    cursor: pointer;
   }
 
   ul.messages {
     height: calc(100% - 80px);
     overflow: auto;
     list-style-type: none;
-    padding: 20px 8px 20px 15px;
+    padding: 10px 7px 15px 12px;
     margin: 0;
 
     li {
+      div.messages_status {
+        width: 100%;
+        padding: 5px;
+        background-color: #e9ecef;
+        text-align: center;
+        font-size: 0.8em;
+        margin-bottom: 15px;
+  
+        > button {
+          border-width: 0;
+          background-color: transparent;
+          cursor: pointer;
+        }
+      }
+
       img {
-        min-width: 30px;
-        width: 30px;
+        min-width: 35px;
+        width: 35px;
         margin-top: 15px;
+        border-radius: 50%;
         align-self: flex-start;
+        box-shadow: 0 5px 0 $gray-200;
       }
 
       .details {
-        margin: 11px 10px 0 10px;
+        margin: 11px 7px 0 7px;
 
         h6 {
-          font-size: 0.9em;
+          font-size: 0.7em;
           text-align: left;
           margin-bottom: 4px;
           font-weight: 900;
-          color: $gray-500;
+          color: $gray-600;
         }
 
         p {
+          overflow-wrap: anywhere;
           font-size: 0.9em;
           padding: 5px 10px;
           background-color: $primary;
@@ -74,17 +99,21 @@
 
   form.chat_form {
     position: relative;
-    box-shadow: 0 -1px 1px rgba(0,0,0,0.2);
+    border-style: solid;
+    border-color: $gray-200;
+    border-width: 2px 0;
 
     > textarea {
-      height: 40px;
+      height: 35px;
       resize: none;
       overflow: hidden;
+      padding: 7px 12px;
       border-width: 0 !important;
       box-shadow: 0 0 0 !important;
     }
 
     > button.send_btn {
+      height: 35px;
       border-radius: 0;
     }
   }  
